# tests

./: .gitignore  README.md  index.md  localLLM_streamlit_app.py  test.txt
customForward/: driver.py  modeling_llama.py  plot_probabilities.py
docs/: cmake.md  cuda.md  git.md  libtorch.md  mle_kl_ce_nll.md
fastAPI/: llm_serve.py
finetuning_llm/: driver3-bf16-ga-gc-lora.py
finetuning_llm/wandb/: latest-run
finetuning_llm/wandb/run-20230723_152926-2o8i529u/: run-2o8i529u.wandb
finetuning_llm/wandb/run-20230723_163912-e6qip1id/: run-e6qip1id.wandb
llm_evaluation/: evaluate_mmlm_hf.py
llm_finetuning/: configurations.py  data.py  driver0-bf16-ga.py  driver1-bf16-ga-gc.py  lora_FT.py  train.py  train_utils.py
llm_quantization/: quantize_llm.py
random/: efficient_training_1xGPU_benchmarks.py  plot_norms.py  plot_positional_embeddings.py  plot_vector_norms.py
random/micrograd/: micrograd.cpp  micrograd.py
torch_cpp/dcgan/: CMakeLists.txt  create_torch_chkpt.py  dcgan.cpp
torch_cpp/example-app/: CMakeLists.txt  example-app.cpp  example-mnist.py
util_snippets/: SDPA.py  colab_functions.py  efficient_training_1xGPU_benchmarks.ipynb  eig_decomp.py  pytorch-quantization-tuts.py
util_snippets/cpp_extensions/: docs.md
util_snippets/ctypes/: CMakeLists.txt  Makefile  docs.md  example.c  example.py
util_snippets/cuda/: docs.md
util_snippets/gpt2-things/: model.py  surgery.py
util_snippets/pybind11/: CMakeLists.txt  example.cpp  example.py
util_snippets/torch_cpp_extensions/: docs.md  main.py
util_snippets/triton/: hello.py
(+22 files in other folders)
